<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="movies">MOVIES</string>
    <string name="tv_shows">TV SHOWS</string>
    <string name="movie_catalogue">Movie Catalogue</string>
</resources>